Star class now ina a module. P5.js running in instance mode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"
     ></script>
-    <script defer src="script.js"></script>
+    <script defer type="module" src="script.js"></script>
   </head>
   <body></body>
 </html>
