--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Windows 3.1 “starfield” screensaver</title>
     <link rel="stylesheet" href="./style.css" />
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"
-    ></script>
     <script defer type="module" src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <canvas class="canvas-view"></canvas>
+  </body>
 </html>
