css grid investigation/learning

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script defer type="module" src="script.js"></script>
   </head>
   <body>
+    <!-- <canvas class="canvas-view"></canvas> -->
     <canvas class="canvas-view"></canvas>
+    <div class="main-container">
+      <div class="grid-container">
+        <div class="grid-common grid-content-1">1 Lorem.</div>
+        <div class="grid-common grid-content-2">
+          <h1>2 TEST CSS</h1>
+        </div>
+        <div class="grid-common grid-content-3">3 Lorem ipsum.</div>
+        <div class="grid-common grid-content-4">
+          <iframe
+            class="video"
+            src="https://www.youtube.com/embed/gtzMBSWLIJs?si=-4AnsWxhSrjppA8t&amp;controls=0"
+          ></iframe>
+        </div>
+      </div>
+      <div class="bottom-section">BELOW PAGE</div>
+    </div>
   </body>
 </html>
