using z-index on the canvas

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <div class="main-container">
       <div class="grid-container">
         <div class="grid-common grid-content-1">1 Lorem.</div>
-        <div class="grid-common grid-content-2">
-          <h1>2 TEST CSS</h1>
-        </div>
+        <div class="grid-common grid-content-2">2 TEST CSS</div>
         <div class="grid-common grid-content-3">3 Lorem ipsum.</div>
         <div class="grid-common grid-content-4">
           <iframe
